test/sema/imported-c-header-has-file-scope.cx
// RUN: %not %cx -typecheck %s %p/inputs/imported-c-header-has-file-scope/second-file.cx | %FileCheck %s

import "inputs/imported-c-header-has-file-scope/a.h"

// CHECK: second-file.cx:2:5: error: unknown identifier 'foo'
